[gd_scene load_steps=15 format=3 uid="uid://cg18efpdfvfia"]

[ext_resource type="Script" uid="uid://bi8fxehs7416i" path="res://script/live_chat.gd" id="1_mwlmc"]
[ext_resource type="Shader" uid="uid://ln4nkymynmj4" path="res://shader/live_chat.gdshader" id="2_j38fe"]
[ext_resource type="Texture2D" uid="uid://vtbop3a7r1f4" path="res://assets/live_captioning_minigame/live_chat_box_1.png" id="2_vpl8s"]
[ext_resource type="Texture2D" uid="uid://sc3ynt03hca4" path="res://assets/live_captioning_minigame/Box2.png" id="4_q0uoa"]
[ext_resource type="Texture2D" uid="uid://cwcwetdee42pg" path="res://assets/live_captioning_minigame/Box3.png" id="5_tp8xs"]
[ext_resource type="Texture2D" uid="uid://bmf8bv7ecu458" path="res://assets/live_captioning_minigame/Box4.png" id="6_066uw"]

[sub_resource type="Animation" id="Animation_j38fe"]
resource_name = "Box1"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Box1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.298119),
"transitions": PackedFloat32Array(2, 2, 2, 2),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Box1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:pivot_offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(650, 300)]
}

[sub_resource type="Animation" id="Animation_tp8xs"]
resource_name = "Box2"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Box2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(2, 2, 2, 2),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Box2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_066uw"]
resource_name = "Box3"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Box3:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(2, 2, 2, 2),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Box3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector2(1.00136e-05, 1.00136e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_g3pcu"]
resource_name = "Box4"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Box4:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0998429, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(2, 2, 2, 2, 2),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Box4:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector2(1.00136e-05, 1.00136e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_iqd11"]
resource_name = "Box5"

[sub_resource type="Animation" id="Animation_q0uoa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Box1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Box1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Box2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Box2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Box3:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Box3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Box4:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Box4:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tp8xs"]
_data = {
&"Box1": SubResource("Animation_j38fe"),
&"Box2": SubResource("Animation_tp8xs"),
&"Box3": SubResource("Animation_066uw"),
&"Box4": SubResource("Animation_g3pcu"),
&"Box5": SubResource("Animation_iqd11"),
&"RESET": SubResource("Animation_q0uoa")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_23hpr"]
shader = ExtResource("2_j38fe")
shader_parameter/fade_start = 100.0
shader_parameter/fade_end = 0.0

[node name="LiveChat" type="Control"]
custom_minimum_size = Vector2(650, 300)
layout_mode = 3
anchors_preset = 0
offset_right = 650.0
offset_bottom = 300.0
pivot_offset = Vector2(650, 300)
script = ExtResource("1_mwlmc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tp8xs")
}

[node name="Box1" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_23hpr")
position = Vector2(650, 300)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("2_vpl8s")
offset = Vector2(-328, -129)

[node name="Name" type="Label" parent="Box1"]
material = SubResource("ShaderMaterial_23hpr")
offset_left = -434.0
offset_top = -233.0
offset_right = -101.0
offset_bottom = -166.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Chat" type="Label" parent="Box1"]
material = SubResource("ShaderMaterial_23hpr")
offset_left = -589.85
offset_top = -150.642
offset_right = -53.8501
offset_bottom = -80.6417
text = "TESTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT"
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Box2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_23hpr")
position = Vector2(0, 300)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("4_q0uoa")
offset = Vector2(246, -126)

[node name="Name" type="Label" parent="Box2"]
material = SubResource("ShaderMaterial_23hpr")
offset_left = 44.0
offset_top = -215.0
offset_right = 317.0
offset_bottom = -168.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Chat" type="Label" parent="Box2"]
material = SubResource("ShaderMaterial_23hpr")
offset_left = 44.0
offset_top = -121.04
offset_right = 444.0
offset_bottom = -51.0397
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Box3" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_23hpr")
position = Vector2(650, 300)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("5_tp8xs")
offset = Vector2(-250, -125)

[node name="Name" type="Label" parent="Box3"]
material = SubResource("ShaderMaterial_23hpr")
offset_left = -450.976
offset_top = -234.0
offset_right = -175.976
offset_bottom = -167.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Chat" type="Label" parent="Box3"]
material = SubResource("ShaderMaterial_23hpr")
offset_left = -448.0
offset_top = -152.0
offset_right = -105.0
offset_bottom = -54.0
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Box4" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_23hpr")
position = Vector2(608, 300)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("6_066uw")
offset = Vector2(-305, -132)

[node name="Name" type="Label" parent="Box4"]
material = SubResource("ShaderMaterial_23hpr")
offset_left = -559.0
offset_top = -249.0
offset_right = -316.0
offset_bottom = -199.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Chat" type="Label" parent="Box4"]
material = SubResource("ShaderMaterial_23hpr")
offset_left = -559.0
offset_top = -177.0
offset_right = -110.0
offset_bottom = -62.0
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true
